--- a/locale/de/LC_MESSAGES/messages.po
+++ b/locale/de/LC_MESSAGES/messages.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: AMO Webpay\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-10-30 12:29+0000\n"
-"PO-Revision-Date: 2014-10-28 20:32+0000\n"
+"PO-Revision-Date: 2014-10-30 21:02+0000\n"
 "Last-Translator: Michael <michael.koehler1@gmx.de>\n"
 "Language-Team: German (de) <coce@nufuerspam.de>\n"
 "Language: de\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1414528320.0\n"
+"X-POOTLE-MTIME: 1414702937.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16
 msgid "Payment cancelled."
@@ -393,10 +393,9 @@ msgid "Connecting to Firefox Accounts"
 msgstr "Verbindung zu Firefox Accounts wird hergestellt"
 
 #: templates/reset-start.html:8
-#, fuzzy
 msgid ""
 "Are you sure you want to reset your PIN? You must sign in to Firefox "
 "Accounts to reset your PIN."
 msgstr ""
-"Möchten Sie Ihre PIN wirklich zurücksetzen? Sie müssen sich mit Persona "
-"anmelden, um Ihre PIN zurückzusetzen."
+"Möchten Sie Ihre PIN wirklich zurücksetzen? Sie müssen sich mit Firefox "
+"Accounts anmelden, um Ihre PIN zurückzusetzen."
