--- a/locale/nl/LC_MESSAGES/messages.po
+++ b/locale/nl/LC_MESSAGES/messages.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-10-30 12:29+0000\n"
-"PO-Revision-Date: 2014-09-30 16:02+0000\n"
+"PO-Revision-Date: 2014-10-31 11:45+0000\n"
 "Last-Translator: Ton <tonnes.mb@gmail.com>\n"
 "Language-Team: none\n"
 "Language: nl\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1412092937.0\n"
+"X-POOTLE-MTIME: 1414755958.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16
 msgid "Payment cancelled."
@@ -385,15 +385,13 @@ msgstr ""
 
 #: public/js/views/force-auth.js:91 public/js/views/reset-start.js:68
 #: public/js/views/force-auth.js:90
-#, fuzzy
 msgid "Connecting to Firefox Accounts"
-msgstr "Verbinden met Persona"
+msgstr "Verbinden met Firefox Accounts"
 
 #: templates/reset-start.html:8
-#, fuzzy
 msgid ""
 "Are you sure you want to reset your PIN? You must sign in to Firefox "
 "Accounts to reset your PIN."
 msgstr ""
 "Weet u zeker dat u uw pincode opnieuw wilt instellen? U moet zich bij "
-"Persona aanmelden om uw pincode opnieuw in te stellen."
+"Firefox Accounts aanmelden om uw pincode opnieuw in te stellen."
