--- a/locale/it/LC_MESSAGES/messages.po
+++ b/locale/it/LC_MESSAGES/messages.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Webpay\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-10-30 12:29+0000\n"
-"PO-Revision-Date: 2014-10-05 19:36+0000\n"
+"PO-Revision-Date: 2014-11-01 19:00+0000\n"
 "Last-Translator: Sandro <gialloporpora@mozillaitalia.org>\n"
 "Language-Team: mozillaitalia\n"
 "Language: it\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1412537769.0\n"
+"X-POOTLE-MTIME: 1414868454.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16
 msgid "Payment cancelled."
@@ -383,15 +383,13 @@ msgstr ""
 
 #: public/js/views/force-auth.js:91 public/js/views/reset-start.js:68
 #: public/js/views/force-auth.js:90
-#, fuzzy
 msgid "Connecting to Firefox Accounts"
-msgstr "Connessione a Persona in corso"
+msgstr "Connessione a Firefox Account in corso…"
 
 #: templates/reset-start.html:8
-#, fuzzy
 msgid ""
 "Are you sure you want to reset your PIN? You must sign in to Firefox "
 "Accounts to reset your PIN."
 msgstr ""
 "Sei sicuro di voler reimpostare il tuo codice PIN? Dovrai effettuare "
-"l’accesso con Persona per completare questa operazione."
+"l’accesso con Firefox Account per completare questa operazione."
